external-crates/move/crates/move-compiler/tests/move_check/feature_gate/macro_call.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/feature_gate/macro_call.move:4:9
  │
4 │         foo!(|| ())
  │         ^^^^^^^^^^^ Macros are not supported by current edition 'legacy', only '2024.alpha' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E04029]: invalid function call
  ┌─ tests/move_check/feature_gate/macro_call.move:4:9
  │
2 │     public fun foo(_: u64) {}
  │                --- Declared a macro function here
3 │     fun bar() {
4 │         foo!(|| ())
  │         ^^^^^^^^^^^ 'foo' is not a macro function and cannot be called with a `!`. Try replacing with 'foo'

error[E04007]: incompatible types
  ┌─ tests/move_check/feature_gate/macro_call.move:4:9
  │
2 │     public fun foo(_: u64) {}
  │                       --- Expected: 'u64'
3 │     fun bar() {
4 │         foo!(|| ())
  │         ^^^^^^^^^^^
  │         │    │
  │         │    Given: '||_'
  │         Invalid call of 'a::m::foo'. Invalid argument for parameter '_'

