external-crates/move/crates/move-compiler/tests/move_check/feature_gate/macro_call.move
module a::m {
    public fun foo(_: u64) {}
    fun bar() {
        foo!(|| ())
    }
}
